--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,5 @@
+{project_plugins, [rebar3_ex_doc]}.
+
 {erl_opts, [
     debug_info,
     warnings_as_errors,
@@ -57,6 +59,20 @@
     ]}
 ]}.
 
+{hex, [
+    {doc, ex_doc}
+]}.
+
+{ex_doc, [
+    {extras, [
+        {"README.md", #{title => "Overview"}},
+        {"LICENSE", #{title => "License"}}
+    ]},
+    {main, "README.md"},
+    {source_url, "https://github.com/roquess/alara"},
+    {api_reference, true}
+]}.
+
 {edoc_opts, [
     {doclet, edoc_doclet_chunks},
     {layout, edoc_layout_chunks},
@@ -66,3 +82,4 @@
     {source_path, ["src"]},
     {application, alara}
 ]}.
+
