--- a/rebar.config
+++ b/rebar.config
@@ -2,62 +2,14 @@
 
 {plugins, [rebar3_hex]}.
 
-{erl_opts, [
-    debug_info,
-    warnings_as_errors,
-    warn_export_all,
-    warn_unused_import,
-    warn_untyped_record
-]}.
-
-{deps, [
-]}.
+{deps, [ ]}.
 
 {shell, [
-    {config, "config/sys.config"},
     {apps, [alara]}
-]}.
-
-{relx, [
-    {release, {alara, "1.0.0"}, [alara, sasl]},
-    {dev_mode, true},
-    {include_erts, false},
-    {extended_start_script, true},
-    {sys_config, "./config/sys.config"}
-]}.
-
-{profiles, [
-    {prod, [
-        {erl_opts, [no_debug_info, warnings_as_errors]},
-        {relx, [
-            {dev_mode, false},
-            {include_erts, true},
-            {system_libs, true}
-        ]}
-    ]},
-    {test, [
-        {deps, [
-            {proper, "1.5.0"}
-        ]},
-        {erl_opts, [debug_info]}
-    ]}
-]}.
-
-{ct_opts, [
-    {sys_config, "config/sys.config"}
 ]}.
 
 {cover_enabled, true}.
 {cover_opts, [verbose]}.
-
-{dialyzer, [
-    {warnings, [
-        unmatched_returns,
-        error_handling,
-        race_conditions,
-        underspecs
-    ]}
-]}.
 
 {hex, [
     {doc, ex_doc}
@@ -69,17 +21,7 @@
         {"LICENSE", #{title => "License"}}
     ]},
     {main, "README.md"},
-    {source_url, "https://github.com/roquess/alara"},
+    {source_url, "https://github.com/Green-Mice/alara"},
     {api_reference, true}
-]}.
-
-{edoc_opts, [
-    {doclet, edoc_doclet_chunks},
-    {layout, edoc_layout_chunks},
-    {preprocess, true},
-    {packages, false},
-    {subpackages, false},
-    {source_path, ["src"]},
-    {application, alara}
 ]}.
 
